# langgraph-learning

./: .dockerignore  .env.example  .gitignore  2_graph_with_condition.ipynb  5_tool_call_agent.ipynb  6_memory.ipynb  CHECKLIST.md  CLAUDE.md  DEPLOYMENT_SUMMARY.md  DOC_INDEX.md  Dockerfile  PROMPT_ITERATION_LOG.md  QUICKSTART.md  QUICK_DEPLOY.md  README.md  STREAMING_ARCHITECTURE.md  TESTING.md  chat.py  data_loaders.py  deploy.sh  docker-compose.yml  immediate_graph.py  lingolino.ipynb  lingolino_prototype.ipynb  nodes.py  pyproject.toml  start_api.sh  task-definition.json  test_beat_integration.sh  test_chat_simple.py  test_docker.sh  test_output_contract.py  test_prompt_repository_logging.py  test_streaming.py
agentic-system/: BEAT_INTEGRATION_EXAMPLE.py  BEAT_SYSTEM_README.md  CHAT_README.md  IMPLEMENTATION_SUMMARY.md  REFACTORING_README.md  S3_BUCKET_POLICY.json  background_graph.py  beat_pipeline.py  beats.py  chat.py  data_loaders.py  german_grammar_postprocess.py  immediate_graph.py  local_fallback_prompts.py  master_prompts.py  model_config.py  moderation_ai_graph.py  nodes.py  output_contract_builder.py  prompt_admin_ui.html  prompt_repository.py  prompts.py  states.py  test_beat_system.py  test_prompt_repository.py  upload_prompts_to_s3.py  worker_prompts.py
backend/: README.md  __init__.py  main.py
dialogue-system-engineering/: architectural-improvements.md  architecture.md  change_log.md  example-centric-testing-draft.md  grammar_correction_research.md  original_prompts_by_irina.txt
documentation/: AWS_CREDENTIALS.md  BEAT_ARCHITECTURE.md  DEPLOYMENT.md  (+11 more)
(+165 files in other folders)
